--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <center>
 
-	<h1>Fiction Reccomendations</h1>
+	<h1>Fiction Recommendations</h1>
 <h2><i>fiction: literature in the form of prose, especially short stories and novels, that describes imaginary events and people.</i></h2>
 
 <h3><i>The Phantom Tollbooth</i> by Norton Juster</h3>
@@ -34,7 +34,7 @@
 <h3><i>I Was Their American Dream</i> by Malaka Gharib</h3>
 <p>This graphic memoir is filled with relatable moments for all children of immigrants, from culture clash to love for our identities. Gharib perfectly details her life as the biracial daughter of a Filipino mom and Egyptian dad. A joyful book perfect for marvelling over our family’s journeys to where we are today.</p>
 
-<h1>Non-Fiction Reccomendations</h1>
+<h1>Non-Fiction Recommendations</h1>
 <h2><i>non-fiction: prose writing that is based on facts, real events, and real people, such as biography or history.</i></h2>
 
 <h3><i>Bad Blood</i> by John Carreyrou</h3>
